[project]
name = "kptncook"
authors = [
    {name = "Jochen Wersdörfer", email = "jochen-kptncook@wersdoerfer.de"},
]
dynamic = ["version", "description"]
requires-python = ">=3.10"
keywords = [
    "cooking",
    "scraping",
    "client",
    "cli",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [ "httpx>=0.28.1,<0.29", "feedparser>=6.0.11,<7", "rich>=14.0.0,<15", "pydantic>=2.10.6,<3", "pydantic-settings>=2.9.1,<3", "typer>=0.15.2,<0.16", "click>=8.1.8,<9", "unidecode>=1.3.8,<2", "jinja2>=3.1.6,<4", "pygrocy2>=2.4.0,<3"]

[project.optional-dependencies]
test = [
    "pytest >= 6",
    "pytest-cov >= 3",
    "pytest-mock",
]
doc = [
    "mkdocs >= 1.2",
]
dev = [
    "jupyterlab >= 3.2.9",
    "mypy",
    "pre-commit"
]

[project.urls]
Home = "https://github.com/ephes/kptncook"

[tool.isort]
profile = "black"
known_third_party = ["pydantic", "rich"]

[project.scripts]
kptncook = "kptncook:cli"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "tests"
filterwarnings = [
    "ignore::DeprecationWarning:pydantic",
]

[tool.pixi.workspace]
channels = [
  "https://prefix.dev/pixi-build-backends",
  "https://prefix.dev/conda-forge",
]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]
preview = ["pixi-build"]

[tool.pixi.package]
name = "kptnkcook"
version = "0.1.0"

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "0.1.*" }
channels = [
  "https://prefix.dev/pixi-build-backends",
  "https://prefix.dev/conda-forge",
]

[tool.pixi.package.host-dependencies] 
hatchling = "*"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.version]
path = "kptncook/__init__.py"
